--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,9 +211,9 @@ h1, h2, h3, h4, h5, h6 {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
-  background: url("../img/prof-heroBG.jpg") top center;
+  background: url("../img/heroBG.jpg") top center;
   background-size: cover;
 }
 
@@ -230,6 +230,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero .hero-container {
   position: relative;
+  left: 20vw;
   z-index: 2;
   min-width: 300px;
 }
