--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,6 +234,9 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 2;
   min-width: 300px;
 }
+@media screen (min-width: 500px) {
+  #hero .hero-container{left: 15vw;}
+}
 
 #hero h1 {
   margin: 0 0 10px 0;
