--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,7 +236,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media screen and (max-width: 500px) {
   #hero .hero-container{
-    left: 15vw;
+    left: 0;
   }
 }
 
