--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,13 +230,13 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero .hero-container {
   position: relative;
-  left: 0;
+  left: 20vw;
   z-index: 2;
   min-width: 300px;
 }
 @media screen and (max-width: 500px) {
   #hero .hero-container{
-    left: -15px;
+    left: -5px;
   }
 }
 
